--- a/WebApp/Views/DoctorAppointment/PatientProfileView.cshtml
+++ b/WebApp/Views/DoctorAppointment/PatientProfileView.cshtml
@@ -148,7 +148,7 @@
                                     @if (!string.IsNullOrEmpty(Model.oPharmacy))
                                     {
                                         <h4 style="color: #0061b2;"><i class="fa fa-circle" style="width: 15px; font-size: 14px;" aria-hidden="true"></i>&nbsp <b>Pharmacy</b></h4>
-                                        <p style="margin-left: 25px;">
+                                        <p style="padding-left: 25px;">
                                             @Model.oPharmacy
                                         </p>
                                     }
