--- a/WebApp/Views/Consultation/PartialViewDetail.cshtml
+++ b/WebApp/Views/Consultation/PartialViewDetail.cshtml
@@ -104,7 +104,7 @@
     <div class="modal-body text-left">
         <div style="color: #375781;width: 250px;">
             <div class="img-1">
-                <img src="@(string.IsNullOrEmpty(Model.PatientVM.ProfilePhotoBase64) ? WebApp.Helper.SessionHandler.ProfilePhoto : Model.PatientVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
+                <img src="@(Model.DoctorVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
                 <h2>Dr.@doctorName</h2>
@@ -184,7 +184,7 @@
                                         {
                                 <td>
                                     <button id="@item.fileID" type="button" class="btn btn-default" style="display:block; font-size:10px;position:relative" onclick="downloadFile(@item.fileID,@Model.PatientVM.patientid)">
-                                       File+@j;
+                                       File#@j;
                                     </button>
                                 </td>
                                 j = j + 1;
@@ -247,7 +247,7 @@
                                 }
                                     @if (Model.rosItems.Count == 0)
                                     {
-                                        <label>N.A</label>
+                                        <span style="font:normal">N.A</span>
                                     }
                             </p>
                         </td>
