--- a/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultationDetail.cshtml
+++ b/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultationDetail.cshtml
@@ -112,7 +112,7 @@
     <div class="modal-body text-left">
         <div style="color: #375781;width: 250px;">
             <div class="img-1">
-                <img src="@(string.IsNullOrEmpty(Model.PatientVM.ProfilePhotoBase64) ? WebApp.Helper.SessionHandler.ProfilePhoto : Model.PatientVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
+                <img src="@(Model.PatientVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
                 <h2>@patienName</h2>
@@ -188,7 +188,7 @@
                                        {
                                <td>
                                    <button id="@item.fileID" type="button" class="btn btn-default" style="display:block; font-size:10px;position:relative" onclick="downloadFile(@item.fileID,@Model.PatientVM.patientid)">
-                                       File+@j;
+                                       File#@j;
                                    </button>
                                </td>
                                j = j + 1;
@@ -252,7 +252,7 @@
                                 }
     @if (Model.rosItems.Count == 0)
     {
-        <span>N.A</span>
+        <span style="font:normal">N.A</span>
     }
                         </p></td>
                     </tr>
