tokbox issue resolved

--- a/WebApp/Views/Appointment/PartialViewDetail.cshtml
+++ b/WebApp/Views/Appointment/PartialViewDetail.cshtml
@@ -189,9 +189,9 @@
                 }
 
             }
-            @if (Model.AppFiles ==null)
+            @if (Model.AppFiles.Count ==0)
             {
-                <b>Appointment Files:</b><br>N.A
+                <b>Appointment Files:</b><br /><span>N.A</span>
                 
             }
         </p>
