--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -481,7 +481,7 @@
                     // alert(fromJson.status);
 
                     if (fromJson.status == 'consultID') {
-                        alert('consultID recieved:' + fromJson.name);
+                     //   alert('consultID recieved:' + fromJson.name);
                         localStorage.setItem('consultID', fromJson.name);
                         return;
                     }
