--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div class="sidebar-footer hidden-small" style="background: #172D44;">
-                        <a data-toggle="tooltip" data-placement="top" title="My Profile">
+                        <a data-toggle="tooltip" data-placement="top" title="My Profile"  href="@Url.Action("Index","PatientProfile")">
                             <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                         </a>
                         <a data-toggle="tooltip" data-placement="top" title="Full Screen" onclick="toggleFullScreen();">
