--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -181,9 +181,10 @@
                         </div>
                     </div>
                     <div class="sidebar-footer hidden-small" style="background: #172D44;">
-                        <a data-toggle="tooltip" data-placement="top" title="My Profile">
+                        <a data-toggle="tooltip" data-placement="top" title="My Profile"  href="@Url.Action("Index","PatientProfile")">
                             <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                         </a>
+
                         <a data-toggle="tooltip" data-placement="top" title="FullScreen" onclick="toggleFullScreen();">
                            
                         </a>
