setDoctor info calling twice , so commit one tha is inside setDateTime on seeDoctor.cshtml

--- a/WebApp/Views/HealthCareTeam/Index.cshtml
+++ b/WebApp/Views/HealthCareTeam/Index.cshtml
@@ -1478,8 +1478,10 @@
             //alert('load appointment detaul');
             // Your step validation logic
             // set isStepValid = false if has errors
+            showLoader();
             showDoctorInfo();
             showApppointmentSummary();
+            hideLoader();
           
 
         }
