rating in profile api and show review on click stars in consultation grid

--- a/WebApp/Views/DoctorConsultation/Index.cshtml
+++ b/WebApp/Views/DoctorConsultation/Index.cshtml
@@ -80,11 +80,153 @@
 
     </div>
 </div><!-- col4 -->
+<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width: 500px;margin-left: 280px;">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="timingsmodaltitle">Consultation Review</h4>
+            </div><!--/.modal header-->
+
+            <div class="modal-body text-left">
+                <div class="row" id="docrow">
+                    <input type="text" style="display:none" id="consultID">
+
+                    <form class="form-horizontal form-label-left" style="margin-top: -20px;">
+                        <div class="col-sm-offset-4 col-sm-4">
+                            <div class="xdisplay_inputx form-group has-feedback">
+
+                                <span id="inputSuccess2Status" class="sr-only">(success)</span>
+                            </div>
+                        </div>
+                    </form>
+                    <form class="form-horizontal form-label-left">
+                        <div class="col-sm-12 text-center" id="rdiv">
+                            @*style="margin-left:97px"*@
+
+                            <a href="javascript:void(0);" onclick="toggle(this);"><span id="s1" class="fa fa-star-o"></span></a>
+                            <a href="javascript:void(0);"><span id="s2" class="fa fa-star-o"></span></a>
+                            <a href="javascript:void(0);"><span id="s3" class="fa fa-star-o"></span></a>
+                            <a href="javascript:void(0);"><span id="s4" class="fa fa-star-o"></span></a>
+                            <a href="javascript:void(0);"><span id="ss5" class="fa fa-star-o"></span></a>
+
+                        </div>
+                        <div class="col-sm-12 text-center" style="margin-top: 20px;">
+                            <textarea id="message" class="form-control" name="message" data-parsley-maxlength="1000"
+                                      data-parsley-validation-threshold="10"></textarea>
+                        </div>
+                        <button style="margin-right: 210px;margin-top: 6px;" type="button" class="btn btn-primary btn-sm pull-right" id="apply" onclick=WriteReview($("#message").val())>Submit</button>
+                        <button style="margin-right: 210px;margin-top: 6px; display:none" type="button" class="btn btn-primary btn-sm pull-right" id="ok" onclick="$('#myModal1').modal('hide')">OK</button>
+                    </form>
+
+                </div><!--/.modal body-->
+            </div>
+        </div>
+    </div>
+</div><!-- col1 -->
 <iframe id="iframeDownload" style="display:none;"></iframe>
 <!-- /page content -->
 
 <script>
     var cID = 0;
+
+    function showReview(consultID) {
+        $.ajax({
+            url: '@Url.Action("GetConsultationReview", "DoctorConsultation")',
+            type: "POST",
+            data: { 'consultID': consultID },
+            dataType: 'json',
+            success: function (result) {
+                //Reload container
+                if (result.Message != undefined) {
+                    new PNotify({ title: 'Error', text: result.Message, type: 'error', styling: 'bootstrap3' });
+                    hideLoader();
+                }
+                else {
+                    var mymodal = $('#myModal1');
+                    $("span").css("pointer-events", "none");
+                    $("#ss5").removeClass('fa fa-star');
+                    $("#ss5").addClass('fa fa-star-o');
+                    //$("#ss5").off("click");
+                    $("#s4").removeClass('fa fa-star');
+                    $("#s4").addClass('fa fa-star-o');
+                    //$("#s4").off("click");
+                    $("#s3").removeClass('fa fa-star');
+                    $("#s3").addClass('fa fa-star-o');
+                    //$("#s3").off("click");
+                    $("#s2").removeClass('fa fa-star');
+                    $("#s2").addClass('fa fa-star-o');
+                    //$("#s2").off("click");
+                    $("#s1").removeClass('fa fa-star');
+                    $("#s1").addClass('fa fa-star-o');
+                    //$("#s1").off("click");
+                    if (result.Object.star == 1) {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+
+                    }
+                    if (result.Object.star == 2) {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+
+                    }
+                    if (result.Object.star == 3) {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+                        $("span#s3").removeClass('fa fa-star-o');
+                        $("span#s3").addClass('fa fa-star');
+
+                    }
+                    if (result.Object.star == 4) {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+                        $("span#s3").removeClass('fa fa-star-o');
+                        $("span#s3").addClass('fa fa-star');
+                        $("span#s4").removeClass('fa fa-star-o');
+                        $("span#s4").addClass('fa fa-star');
+
+                    }
+                    if (result.Object.star == 5) {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+                        $("span#s3").removeClass('fa fa-star-o');
+                        $("span#s3").addClass('fa fa-star');
+                        $("span#s4").removeClass('fa fa-star-o');
+                        $("span#s4").addClass('fa fa-star');
+                        $("span#ss5").removeClass('fa fa-star-o');
+                        $("span#ss5").addClass('fa fa-star');
+
+                    }
+                    mymodal.find('#message').val(result.Object.reviewText);
+                    mymodal.find('#apply').hide();
+                    mymodal.find('#ok').show();
+                    mymodal.modal('show');
+                    hideLoader();
+
+                }
+
+            },
+            error: function (err) {
+                //alert(err.statusText);
+                new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                //Stop displaying loader
+                hideLoader();
+            }
+        });
+    }
 
     function showProfile(patientid) {
 
