--- a/WebApp/Views/Consultation/Index.cshtml
+++ b/WebApp/Views/Consultation/Index.cshtml
@@ -103,6 +103,7 @@
                                           data-parsley-validation-threshold="10"></textarea>
                             </div>
                             <button style="margin-right: 210px;margin-top: 6px;" type="button" class="btn btn-primary btn-sm pull-right" id="apply" onclick=WriteReview($("#message").val())>Submit</button>
+                            <button style="margin-right: 210px;margin-top: 6px; display:none" type="button" class="btn btn-primary btn-sm pull-right" id="ok" onclick="$('#myModal1').modal('hide')">OK</button>
                         </form>
 
                     </div><!--/.modal body-->
@@ -126,7 +127,135 @@
 <script>
     var star=0;
     var cID = 0;
+    function writeReview(consultID)
+    {
+        var mymodal = $('#myModal1');
+        $("span").css("pointer-events", "auto");
+        $("#ss5").removeClass('fa fa-star');
+        $("#ss5").addClass('fa fa-star-o');
+       
+        $("#s4").removeClass('fa fa-star');
+        $("#s4").addClass('fa fa-star-o');
+        
+        $("#s3").removeClass('fa fa-star');
+        $("#s3").addClass('fa fa-star-o');
+       
+        $("#s2").removeClass('fa fa-star');
+        $("#s2").addClass('fa fa-star-o');
+       
+        $("#s1").removeClass('fa fa-star');
+        $("#s1").addClass('fa fa-star-o');
+       
+        mymodal.find('#message').val("");
+        mymodal.find('#apply').show();
+        mymodal.find('#ok').hide();
+        mymodal.modal('show');
+        $("#pvappid").val(consultID);
+    }
+    function showReview(consultID)
+    {
+        $.ajax({
+            url: '@Url.Action("GetConsultationReview", "Consultation")',
+            type: "POST",
+            data: {'consultID':consultID},
+            dataType: 'json',
+            success: function (result) {
+                //Reload container
+                if (result.Message != undefined) {
+                    new PNotify({ title: 'Error', text: result.Message, type: 'error', styling: 'bootstrap3' });
+                    hideLoader();
+                }
+                else {
+                    var mymodal = $('#myModal1');
+                    $("span").css("pointer-events", "none");
+                    $("#ss5").removeClass('fa fa-star');
+                    $("#ss5").addClass('fa fa-star-o');
+                    //$("#ss5").off("click");
+                    $("#s4").removeClass('fa fa-star');
+                    $("#s4").addClass('fa fa-star-o');
+                    //$("#s4").off("click");
+                    $("#s3").removeClass('fa fa-star');
+                    $("#s3").addClass('fa fa-star-o');
+                    //$("#s3").off("click");
+                    $("#s2").removeClass('fa fa-star');
+                    $("#s2").addClass('fa fa-star-o');
+                    //$("#s2").off("click");
+                    $("#s1").removeClass('fa fa-star');
+                    $("#s1").addClass('fa fa-star-o');
+                    //$("#s1").off("click");
+                    if( result.Object.star==1)
+                    {
 
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        
+                    }
+                    if( result.Object.star==2)
+                    {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+                        
+                    }
+                    if( result.Object.star==3)
+                    {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+                        $("span#s3").removeClass('fa fa-star-o');
+                        $("span#s3").addClass('fa fa-star');
+                       
+                    }
+                    if( result.Object.star==4)
+                    {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+                        $("span#s3").removeClass('fa fa-star-o');
+                        $("span#s3").addClass('fa fa-star');
+                        $("span#s4").removeClass('fa fa-star-o');
+                        $("span#s4").addClass('fa fa-star');
+                       
+                    }
+                    if( result.Object.star==5)
+                    {
+
+                        $("span#s1").removeClass('fa fa-star-o');
+                        $("span#s1").addClass('fa fa-star');
+                        $("span#s2").removeClass('fa fa-star-o');
+                        $("span#s2").addClass('fa fa-star');
+                        $("span#s3").removeClass('fa fa-star-o');
+                        $("span#s3").addClass('fa fa-star');
+                        $("span#s4").removeClass('fa fa-star-o');
+                        $("span#s4").addClass('fa fa-star');
+                        $("span#ss5").removeClass('fa fa-star-o');
+                        $("span#ss5").addClass('fa fa-star');
+                        
+                    }
+                    mymodal.find('#message').val(result.Object.reviewText);
+                    mymodal.find('#message').attr("disabled", "disabled"); 
+                    mymodal.find('#apply').hide();
+                    mymodal.find('#ok').show();
+                    mymodal.modal('show');
+                    hideLoader();
+
+                }
+
+            },
+            error: function (err) {
+                //alert(err.statusText);
+                new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                //Stop displaying loader
+                hideLoader();
+            }
+        });
+    }
     function showProfile(docid) {
 
         var did = docid;//$("#pvdocid").val();
@@ -277,7 +406,7 @@
             }
             if( jQuery(this).attr("id")=="s4")
             {
-                alert('4');
+                //alert('4');
                 $("#ss5").removeClass('fa fa-star');
                 $("#ss5").addClass('fa fa-star-o');
                 $("#s4").removeClass('fa fa-star');
@@ -299,7 +428,19 @@
     //Write Review
     function WriteReview(message)
     {
-
+        showLoader();
+        if(star==0)
+        {
+            showAlert("Error","Please give stars.");
+            hideLoader();
+            return;
+        }
+        if(message=="")
+        {
+            showAlert("Error","Please write review.");
+            hideLoader();
+            return;
+        }
         var _objReview = {};
         _objReview["consultID"] =  $("#pvappid").val();
         _objReview["patientID"] = @SessionHandler.UserInfo.Id;
@@ -316,7 +457,7 @@
                     new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
                     $('#myModal1').modal('hide');
                     $('#myModal4').modal('hide');
-                    //stopLoader();
+                    hideLoader();
                 }
                 else {
 
@@ -328,7 +469,7 @@
                         reloadConsultation(function ()
                         {
                             //Stop displaying loader
-                            //stopLoader();
+                            hideLoader();
 
                         });
                     }
@@ -337,7 +478,7 @@
                         new PNotify({ title: 'Error', text: result.ApiResultModel.message, type: 'error', styling: 'bootstrap3' });
                         $('#myModal1').modal('hide');
                         $('#myModal4').modal('hide');
-
+                        hideLoader();
                     }
 
 
@@ -348,7 +489,7 @@
                 //alert(err.statusText);
                 new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                 //Stop displaying loader
-                //stopLoader();
+                hideLoader();
             }
         });
     }
