--- a/WebApp/Views/Consultation/PartialViewConsultation.cshtml
+++ b/WebApp/Views/Consultation/PartialViewConsultation.cshtml
@@ -43,7 +43,7 @@
                             @if (item.reviewStar == 0)
                             {
 
-                                <a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.consultID" id="@item.consultID" data-target="#myModal1" onclick=$("#pvappid").val(@item.consultID);>Write Review</a>
+                                <a href="#" class="thumbnail-col-inner" data-id="@item.consultID" id="@item.consultID"  onclick=writeReview(@item.consultID);>Write Review</a>
 
                             }
                             else
@@ -52,7 +52,7 @@
                                 {
                                     for (var i = 0; i < item.reviewStar; i++)
                                     {
-                                        <a href='javascript:void(0);'><span class='fa fa-star'></span></a>
+                                        <a href='javascript:void(0);' class="thumbnail-col-inner" data-id="@item.consultID" id="@item.consultID" onclick=showReview(@item.consultID);><span class='fa fa-star'></span></a>
                                     }
                                     for (var i = 0; i < 5 - item.reviewStar; i++)
                                     {
@@ -66,7 +66,8 @@
                                     {
                                         for (var i = 0; i < item.reviewStar; i++)
                                         {
-                                            <a href='javascript:void(0);'><span class='fa fa-star'></span></a>
+                                            
+                                            <a href='javascript:void(0);' class="thumbnail-col-inner" data-id="@item.consultID" id="@item.consultID" onclick=showReview(@item.consultID);><span class='fa fa-star'></span></a>
                                         }
                                         for (var i = 0; i < 5 - item.reviewStar; i++)
                                         {
