--- a/WebApp/Views/Consultation_Admin/ConsultationReport.cshtml
+++ b/WebApp/Views/Consultation_Admin/ConsultationReport.cshtml
@@ -97,7 +97,7 @@
                                             @if(item.consultationStatus=="A"){<td class="consultationStatus">Approved</td>}
                                             @if (item.consultationStatus == "P"){<td class="consultationStatus">Pending</td>}
                                             @if(item.consultationStatus=="R"){<td class="consultationStatus">Reschedule</td>}
-                                            @if(item.consultationStatus=="C"){<td class="consultationStatus">Cancelled</td>}
+                                            @if(item.consultationStatus=="C"){<td class="consultationStatus">Completed</td>}
                                         
 
                                    
