--- a/WebApp/Views/Doctor_Admin/Create.cshtml
+++ b/WebApp/Views/Doctor_Admin/Create.cshtml
@@ -235,7 +235,7 @@
                                                     <input name="userid" type="text" style="display:none" value="@item.userId">
                                                 </li>
                                                 <li>
-                                                    <button id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
+                                                    <button class="btn btn-link submit" id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
                                             </ul>
                                         </div>
                                     }
