--- a/WebApp/Views/Patient_Admin/Create.cshtml
+++ b/WebApp/Views/Patient_Admin/Create.cshtml
@@ -228,7 +228,7 @@
 
                                                     <li> <input name="id" type="number" style="display:none" value="@item.patientID"></li>
                                                     <li> <input name="userid" type="text" style="display:none" value="@item.userId"></li>
-                                                    <li> <button id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
+                                                    <li> <button class="btn btn-link submit" id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
 
                                                 </ul>
                                             </div>
